--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open311-messages",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "open311 module to send notification messages i.e email, sms, push etc",
   "main": "index.js",
   "scripts": {
@@ -44,6 +44,7 @@
     "async": "^2.1.4",
     "kue": "^0.11.5",
     "lodash": "^4.17.2",
-    "mongoose": "^4.7.2"
+    "mongoose": "^4.7.2",
+    "object-hash": "^1.1.5"
   }
 }
