fire message:sent:success|error on send

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "keywords": [
     "open311",
     "311",
+    "codetanzania",
     "tanzania",
     "message",
+    "notification",
     "email",
     "sms",
     "push"
