--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open311-messages",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "open311 module to send notification messages i.e email, sms, push etc",
   "main": "index.js",
   "scripts": {
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "is-html": "^1.0.0",
     "kue": "^0.11.5",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.8",
